--- a/oaweb/templates/home.html
+++ b/oaweb/templates/home.html
@@ -4,3 +4,5 @@
 <a href="{% url 'home' %}">home</a>
 <a href="{% url 'super' %}">super</a>
 <a href="{% url 'open' %}">open</a>
+
+{{ stuffreturn }}
